2003-10-14  Gary Thomas  <gary@mlbassoc.com>

	* src/if_dp83816.c (dp83816_poll): Try to better detect condition
	where device just stops.  This seems to be related to Rx overruns,
	but there is no status reported.  The best that can be done is
	detect the condition and then reset/restart the device.

2003-10-02  Gary Thomas  <gary@mlbassoc.com>

	* src/dp83816.h: Let default ESA be a pointer, so platforms can more
	easily set it a runtime.

2003-09-30  Gary Thomas  <gary@mlbassoc.com>

	* src/if_dp83816.c: 
	* src/dp83816.h: 
	* cdl/ns_dp83816_eth_drivers.cdl: New package - ethernet driver for
	National Semiconductor DP83816 PCI

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros
// or inline functions from this file, or you compile this file and link it
// with other works to produce a work based on this file, this file does not
// by itself cause the resulting work to be covered by the GNU General Public
// License. However the source code for this file must still be made available